
noinst_PROGRAMS = benchbitslice testbitslice benchdec benchenc testdec testenc testbsops

benchbitslice_SOURCES = benchbitslice.c
benchbitslice_LDADD = $(top_builddir)/src/libdvbcsa.la
benchbitslice_CFLAGS = -I$(top_srcdir)/src

testbitslice_SOURCES = testbitslice.c
testbitslice_LDADD = $(top_builddir)/src/libdvbcsa.la
testbitslice_CFLAGS = -I$(top_srcdir)/src

benchdec_SOURCES = benchdec.c
benchdec_LDADD = $(top_builddir)/src/libdvbcsa.la
benchdec_CFLAGS = -I$(top_srcdir)/src

benchenc_SOURCES = benchenc.c
benchenc_LDADD = $(top_builddir)/src/libdvbcsa.la
benchenc_CFLAGS = -I$(top_srcdir)/src

testdec_SOURCES = testdec.c
testdec_LDADD = $(top_builddir)/src/libdvbcsa.la
testdec_CFLAGS = -I$(top_srcdir)/src

testenc_SOURCES = testenc.c
testenc_LDADD = $(top_builddir)/src/libdvbcsa.la
testenc_CFLAGS = -I$(top_srcdir)/src

testbsops_SOURCES = testbsops.c
testbsops_LDADD = $(top_builddir)/src/libdvbcsa.la
testbsops_CFLAGS = -I$(top_srcdir)/src

